fixed top and left alignment of ellipses for items 3 and 4

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,12 +367,13 @@ ul {
   background: rgba(240, 99, 184, 0.1);
 }
 .features__item.item3 .ellipse61 {
+  left: 122.96px;
+  top: 22px;
   width: 68.05px;
   height: 40.21px;
   transform: rotate(150deg);
 }
 .features__item.item3 .img {
-  position: absolute;
   width: 241px;
   height: 185px;
   left: -305.29px;
@@ -396,10 +397,10 @@ ul {
   width: 61.85px;
   height: 36.55px;
   top: 278px;
+  left: 124.22px;
   transform: rotate(20.72deg);
 }
 .features__item.item4 .img {
-  position: absolute;
   width: 241px;
   height: 185px;
   left: -309.28px;
