--- a/assets/scss/components/features.scss
+++ b/assets/scss/components/features.scss
@@ -163,6 +163,8 @@
         }
 
         .ellipse61 {
+            left: 122.96px;
+            top: 22px;
             width: 68.05px;
             height: 40.21px;
             transform: rotate(150deg);  
@@ -170,13 +172,11 @@
     
 
         .img {
-            position: absolute;
             width: 241px;
             height: 185px;
             left: -305.29px;
             top: 123px;
         }
-
 
     }
 
@@ -202,11 +202,11 @@
             width: 61.85px;
             height: 36.55px;
             top: 278px;
+            left: 124.22px;
             transform: rotate(20.72deg); 
        }
 
         .img {
-            position: absolute;
             width: 241px;
             height: 185px;
             left: -309.28px;
